<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/lo1"
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/hello_there_welcome_back"
        android:textColor="#000"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/sign_in_to_continue"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                tools:ignore="ExtraText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                tools:ignore="ExtraText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:shadowColor="#FFFFFF"
            android:text="@string/forgot_password"
            android:textColor="#0C0C0C"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="#000000"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="@font/antic"
            android:shadowColor="#FFFFFF"
            android:text="@string/new_user_sign_up"
            android:textColor="#0C0C0C"
            android:textStyle="bold"
            tools:targetApi="lollipop" />


    </LinearLayout>

</LinearLayout>